Remove Java 9 List creators